# Rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
code/renderer/: CMakeLists.txt  Maths.cpp  Maths.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ShaderProgram.h  Texture.cpp  Texture.h
code/renderer/shaders/: AnimatedModelDepthVS.h  AnimatedModelVS.h  DepthFS.h  ModelDepthVS.h  ModelVS.h  PhongFS.h  PhongWithShadowFS.h  TexturePhongFS.h
code/test/: CMakeLists.txt
code/test/animationTest/: AnimationTest.cpp
code/test/modelTest/: CMakeLists.txt  ModelTest.cpp
code/test/shadowTest/: ShadowTest.cpp
code/test/textureTest/: CMakeLists.txt  TextureShader.h  TextureTest.cpp
code/test/triangleTest/: CMakeLists.txt  TriangleTest.cpp
code/three.math/: CMakeLists.txt
code/three.math/include/: Print.inl  Quaternion.h  Ray.h  Vector.h
code/three.math/include/linmath/: gen_type.h  matrix4x4_type.h  matrix_math.inl  matrix_transform.inl  quaternion_type.h  vector3_type.inl  vector4_type.h  vector_math.inl
code/three.math/source/: Matrix3.cpp
code/utilities/: Loader.cpp  Loader.h  Scene.h
code/viewer/: BaseApp.cpp  BaseApp.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp
cpp/: CMakeLists.txt  build-assimp-macos.sh
cpp/examples/: CMakeLists.txt
cpp/examples/01-triangle/: CMakeLists.txt  triangle_test.cpp
cpp/examples/02-texture/: CMakeLists.txt
cpp/examples/03-animation/: CMakeLists.txt  animation_test.cpp
cpp/examples/04-model/: CMakeLists.txt
cpp/examples/loader/: CMakeLists.txt
cpp/source/: example_base.cpp  example_base.h  keycode.h
cpp/source/common/: CMakeLists.txt  linalg.h
cpp/source/rasterizer/: rasterizer.cpp  render_target.cpp  render_target.h  shader_program.h
examples/: CMakeLists.txt
examples/01-triangle/: triangle_test.cpp
examples/02-texture/: CMakeLists.txt  texture_test.cpp
examples/03-animation/: CMakeLists.txt  animation_test.cpp
examples/04-model/: CMakeLists.txt  model_test.cpp
examples/04-sponza/: CMakeLists.txt  sponza_test.cpp
examples/loader/: CMakeLists.txt  loader.cpp  loader.h  scene.h
source/: .clang-format  CMakeLists.txt  application.h  application_macos.cpp  application_win32.cpp  example_base.cpp  example_base.h  main.cpp
source/common/: config.h  core_assert.cpp  core_assert.h  linalg.h
source/rasterizer/: CMakeLists.txt  JobSystem.cpp  JobSystem.h  RenderTarget.cpp  ShaderProgram.h  Texture.cpp  Texture.h  rasterizer.cpp  rasterizer.h  render_target.h  sampler.cpp  shader_program.h
source/renderer/: CMakeLists.txt  Maths.cpp  Maths.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ShaderProgram.h  Texture.cpp  Texture.h
source/renderer/shaders/: AnimatedModelDepthVS.h  AnimatedModelVS.h  DepthFS.h  ModelDepthVS.h  ModelVS.h  PhongFS.h  PhongWithShadowFS.h  TexturePhongFS.h
source/test/: CMakeLists.txt
source/test/animationTest/: AnimationTest.cpp  CMakeLists.txt
source/test/modelTest/: ModelTest.cpp
source/test/shadowTest/: CMakeLists.txt  ShadowTest.cpp
source/test/textureTest/: CMakeLists.txt  TextureShader.h  TextureTest.cpp
source/test/triangleTest/: CMakeLists.txt  TriangleTest.cpp
source/three.math/include/: Box.h  Matrix.h  Types.h
source/three.math/include/linmath/: gen_type_math.inl  mat_type.h  matrix3x3_type.h  matrix3x3_type.inl  matrix4x4_type.inl  quaternion_type.inl  swizzle_type.h  vector2_type.h  vector2_type.inl  vector3_type.h  vector4_type.inl
source/three.math/source/: CMakeLists.txt  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
source/utilities/: CMakeLists.txt  Loader.cpp  Loader.h  Scene.h
source/viewer/: BaseApp.cpp  BaseApp.h  CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp
src/: main.rs
